--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ matrix:
       addons: &gcc7
         apt:
           sources: *all_sources
-          packages: ['valgrind', 'g++-7']
+          packages: ['valgrind', 'g++-7', 'lcov']
       env: COMPILER='g++-7' VALGRIND=1 COVERAGE=1
 
     - os: linux
@@ -73,7 +73,7 @@ before_script:
     # Use Debug builds for running Valgrind and building examples
     cmake -H. -BBuild-Debug -DCMAKE_BUILD_TYPE=Debug -Wdev -DUSE_CPP14=${CPP14} -DUSE_VALGRIND=${VALGRIND} -DBUILD_EXAMPLES=ON -DGENERATE_COVERAGE=${COVERAGE}
     # Don't bother with release build for coverage build
-    if [[ ! -z COVERAGE ]]; then
+    if [[ ! -z ${COVERAGE} ]]; then
       cmake -H. -BBuild-Release -DCMAKE_BUILD_TYPE=Release -Wdev -DUSE_CPP14=${CPP14}
     fi
 
@@ -83,7 +83,7 @@ script:
     cd Build-Debug
     make -j 2
     CTEST_OUTPUT_ON_FAILURE=1 ctest -j 2
-    if [[ ! -z COVERAGE ]]; then
+    if [[ ! -z ${COVERAGE} ]]; then
       cd ../Build-Release
       make -j 2
       CTEST_OUTPUT_ON_FAILURE=1 ctest -j 2
