--- a/.travis.yml
+++ b/.travis.yml
@@ -83,6 +83,7 @@ script:
     cd Build-Debug
     make -j 2
     CTEST_OUTPUT_ON_FAILURE=1 ctest -j 2
+    echo ${COVERAGE}
     if [[ ! -z ${COVERAGE} ]]; then
       cd ../Build-Release
       make -j 2
