--- a/.travis.yml
+++ b/.travis.yml
@@ -73,7 +73,7 @@ before_script:
     # Use Debug builds for running Valgrind and building examples
     cmake -H. -BBuild-Debug -DCMAKE_BUILD_TYPE=Debug -Wdev -DUSE_CPP14=${CPP14} -DUSE_VALGRIND=${VALGRIND} -DBUILD_EXAMPLES=ON -DGENERATE_COVERAGE=${COVERAGE}
     # Don't bother with release build for coverage build
-    if [[ ! -z ${COVERAGE} ]]; then
+    if [[ -z ${COVERAGE} ]]; then
       cmake -H. -BBuild-Release -DCMAKE_BUILD_TYPE=Release -Wdev -DUSE_CPP14=${CPP14}
     fi
 
@@ -84,7 +84,7 @@ script:
     make -j 2
     CTEST_OUTPUT_ON_FAILURE=1 ctest -j 2
     echo ${COVERAGE}
-    if [[ ! -z ${COVERAGE} ]]; then
+    if [[ -z ${COVERAGE} ]]; then
       cd ../Build-Release
       make -j 2
       CTEST_OUTPUT_ON_FAILURE=1 ctest -j 2
