--- a/codecov.yml
+++ b/codecov.yml
@@ -11,3 +11,4 @@ coverage:
     - "**/catch_reporter_tap.hpp"
     - "**/catch_reporter_automake.hpp"
     - "**/catch_reporter_teamcity.hpp"
+    - "**/external/clara.hpp"
