--- a/.travis.yml
+++ b/.travis.yml
@@ -40,8 +40,8 @@ matrix:
       addons:
           apt:
               sources: *all_sources
-              packages: ['clang-4.0', 'valgrind', 'libstdc++-6-dev', 'lcov']
-      env: COMPILER='clang++-4.0' CPP14=1 VALGRIND=1
+              packages: ['clang-4.0', 'llvm-4.0', 'valgrind', 'libstdc++-6-dev', 'lcov']
+      env: COMPILER='clang++-4.0' CPP14=1 VALGRIND=1 COVERAGE=1
 
     - os: linux
       compiler: clang
