--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ matrix:
       addons:
           apt:
               sources: *all_sources
-              packages: ['clang-4.0', 'llvm-4.0', 'valgrind', 'libstdc++-6-dev', 'lcov']
+              packages: ['clang-4.0', 'valgrind', 'libstdc++-6-dev', 'lcov']
       env: COMPILER='clang++-4.0' CPP14=1 VALGRIND=1 COVERAGE=1
 
     - os: linux
@@ -49,7 +49,7 @@ matrix:
           apt:
               sources: *all_sources
               packages: ['clang-5.0', 'valgrind', 'libstdc++-6-dev']
-      env: COMPILER='clang++-5.0' CPP14=1 VALGRIND=1
+      env: COMPILER='clang++-5.0' CPP14=1 VALGRIND=1 COVERAGE=1
 
 install:
   - DEPS_DIR="${TRAVIS_BUILD_DIR}/deps"
