--- a/appveyor.yml
+++ b/appveyor.yml
@@ -51,14 +51,15 @@ before_build:
   # 1) Get OpenCppCoverage tool for codecov
   # 2) Regenerate single header include for examples
   # 3) Enable building examples  
-  - ps: |
-      if (($env:CONFIGURATION) -eq "Debug" ) {
+  -  |
+      if %CONFIGURATION%==Debug (
           .\scripts\installOpenCppCoverage.ps1;
           python scripts\generateSingleHeader.py;
-          cmake . -BBuild -A%PLATFORM% -DUSE_WMAIN=%wmain% -DBUILD_EXAMPLES=ON
-      } else {
-          cmake . -BBuild -A%PLATFORM% -DUSE_WMAIN=%wmain% -DBUILD_EXAMPLES=OFF
-      }
+          cmake -H. -BBuild -A%PLATFORM% -DUSE_WMAIN=%wmain% -DBUILD_EXAMPLES=ON -DMSVC_COVERAGE=ON
+      )
+      if %CONFIGURATION%==Release (
+          cmake -H. -BBuild -A%PLATFORM% -DUSE_WMAIN=%wmain% -DBUILD_EXAMPLES=OFF
+      )
       
 
 # build with MSBuild
