--- a/appveyor.yml
+++ b/appveyor.yml
@@ -51,10 +51,9 @@ before_build:
   # 1) Get OpenCppCoverage tool for codecov
   # 2) Regenerate single header include for examples
   # 3) Enable building examples
-  - cmd: >-
-        .\scripts\installOpenCppCoverage.ps1;
-        python scripts\generateSingleHeader.py;
-        cmake -H. -BBuild -A%PLATFORM% -DUSE_WMAIN=%wmain% -DBUILD_EXAMPLES=ON -DMSVC_COVERAGE=ON
+  - .\scripts\installOpenCppCoverage.ps1
+  - python scripts\generateSingleHeader.py
+  - cmake -H. -BBuild -A%PLATFORM% -DUSE_WMAIN=%wmain% -DBUILD_EXAMPLES=ON -DMSVC_COVERAGE=ON
 
 
 # build with MSBuild
