--- a/appveyor.yml
+++ b/appveyor.yml
@@ -69,5 +69,5 @@ test_script:
   - ctest -j 2 -C %CONFIGURATION%
   - ps: |
       if (($env:CONFIGURATION) -eq "Debug" ) {
-          .\codecov -X nocolor -X gcov -F windows -f cobertura1.xml -f cobertura2.xml -f cobertura3.xml -f cobertura4.xml -f cobertura5.xml
+          codecov -X nocolor -X gcov -F windows -f cobertura1.xml -f cobertura2.xml -f cobertura3.xml -f cobertura4.xml -f cobertura5.xml
       }
